# adventofcode

./: .gitignore  .gitmodules  README.md
2017/c/: meson.build
2017/c/aocc/: main.c  meson.build
2017/c/days/: day1.c  day2.c  meson.build
2017/c/lib/: aoc.c  aoc.h  meson.build  vec.h
2018/Cs/: .gitignore  Cs.csproj  Cs.sln  Day1.cs  Day2.cs  Day3.cs  Framework.cs  Program.cs
2019/c++/: .gitignore  Makefile  aocpp  day1.cpp  day1.hpp  day2.cpp  days.hpp  main.cpp  util.cpp  util.hpp
2019/c++/src/: day3.rs  day4.cpp  day5.cpp  day6.cpp  day7.cpp  days.hpp  intcode.cpp  intcode.hpp  main.cpp  rust.cpp  rust.hpp  rust.rs  util.cpp  (+1 more)
2019/cpp/: .gitignore  Makefile  rustc-ice-2023-10-31T11_34_42-9112.txt
2019/go/: day1.go  go.mod  main.go
2022/: .gitignore  README.md  package.json
2022/clojure/: dayfifteen.clj  dayone.clj  dayten.clj
2022/js/: dayfourteen.ts  daysix.js  daytwo.js
2022/rust/: Cargo.toml  out.txt
2022/rust/src/: dayeight.rs  dayeleven.rs  dayeleven_old.rs  dayfive.rs  dayfour.rs  daynine.rs  dayone.rs  dayseven.rs  daysix.rs  daysixteen-perms.rs  daysixteen.rs  daythirteen.rs  daythree.rs  daytwelve.rs  daytwo.rs  main.rs
2024/bash/: day3.sh
2024/haskell/: day1.hs  day11.hs
2024/racket/: day1.rkt
2024/rust/: .gitignore  Cargo.toml
2024/rust/src/: day1.rs  day11.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  parsers.rs  utils.rs
2025/rust/: Cargo.toml
(+40 files in other folders)
