[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
take-until = "0.1.0"
regex = "1.7.0"
priority-queue = "1.3.0"
rayon = "1.6.1"
indicatif = {version = "*", features = ["rayon"]}
init_with = "1.1.0"
