[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.21", features = ["derive"] }
indicatif = { version = "0.17.9", features = ["rayon"] }
itertools = "0.13.0"
nalgebra = "0.33.2"
nom = "7.1.3"
once_cell = "1.20.2"
paste = "1.0.15"
priority-queue = "2.1.1"
rayon = "1.10.0"
regex = "1.11.1"
